<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary"
        app:menu="@menu/toolbar_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_teacher_home"
        app:titleTextColor="@color/on_primary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAvailability"
        style="@style/Widget.Studteach.Card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md">

            <TextView
                android:id="@+id/tvAvailabilityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_availability"
                android:textColor="@color/on_surface"
                android:textSize="@dimen/text_size_lg"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchAvailability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_unavailable"
                android:textColor="@color/on_surface_variant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@color/on_primary"
                app:trackTint="@color/outline_variant" />

            <TextView
                android:id="@+id/tvFromLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/label_from"
                android:textColor="@color/on_surface_variant"
                android:textSize="@dimen/text_size_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAvailabilityTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTimeFrom"
                style="@style/Widget.Studteach.Button.Outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:text="09:00 AM"
                android:textSize="@dimen/text_size_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFromLabel" />

            <TextView
                android:id="@+id/tvToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/label_to"
                android:textColor="@color/on_surface_variant"
                android:textSize="@dimen/text_size_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAvailabilityTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTimeTo"
                style="@style/Widget.Studteach.Button.Outline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:text="05:00 PM"
                android:textSize="@dimen/text_size_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvToLabel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveAvailability"
                style="@style/Widget.Studteach.Button.Primary"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnTimeFrom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvConversationsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:paddingStart="@dimen/spacing_md"
        android:paddingEnd="@dimen/spacing_md"
        android:text="@string/label_conversations"
        android:textColor="@color/on_surface_variant"
        android:textSize="@dimen/text_size_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardAvailability" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvConversations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_md"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConversationsLabel" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no_conversations"
        android:textColor="@color/on_surface_variant"
        android:textSize="@dimen/text_size_md"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardAvailability" />

</androidx.constraintlayout.widget.ConstraintLayout>
