<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Studteach.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_sm"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_md">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/avatar_size_lg"
            android:layout_height="@dimen/avatar_size_lg"
            android:background="@drawable/bg_avatar"
            android:contentDescription="@string/label_teacher"
            android:padding="@dimen/spacing_sm"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTeacherName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/on_surface"
            android:textSize="@dimen/text_size_md"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/viewStatus"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_xs"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/on_surface_variant"
            android:textSize="@dimen/text_size_sm"
            app:layout_constraintEnd_toStartOf="@id/tvAvailability"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@id/tvTeacherName" />

        <View
            android:id="@+id/viewStatus"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@drawable/bg_status_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:text="@string/label_available"
            android:textColor="@color/success"
            android:textSize="@dimen/text_size_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewStatus" />

        <ImageView
            android:id="@+id/ivChatIcon"
            android:layout_width="@dimen/icon_size_md"
            android:layout_height="@dimen/icon_size_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:contentDescription="@string/title_chat"
            android:src="@drawable/ic_chat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAvailability" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
